making progress on D6 slides

--- a/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
@@ -50,10 +50,12 @@ knitr::include_graphics("images/week1/horst-eco-r4ds.png")
 
 <hr>
 
-- **Class:** Mondays 12:15-3:15pm PT (attendance is mandatory)
+::: {.body-text-m}
+- **Class:** Mondays 12:15-3:15pm PT (attendance is mandatory) 
+    - Bren 1424
 - **Discussion Sections:** Tuesdays 1:00-1:50am PT & 2:00-2:50am PT
-
-<br>
+    - Bren 3022A (SCF)
+:::
 
 ```{r}
 #| eval: true 
@@ -64,11 +66,11 @@ knitr::include_graphics("images/week1/horst-eco-r4ds.png")
 knitr::include_graphics("images/week1/bren-hall.jpg")
 ```
 
-<br>
+<!-- <br> -->
 
-::: {.center-text}
-*Class & Discussion Sections meet in Bren 3022A (SCF)*
-:::
+<!-- ::: {.center-text} -->
+<!-- *Class & Discussion Sections meet in Bren 3022A (SCF)* -->
+<!-- ::: -->
 
 ---
 
@@ -97,8 +99,8 @@ knitr::include_graphics("images/week1/sam.png")
 ::: {.center-text}
 [**Sam Csik**]{.teal-text}  
 **Email:** [scsik@ucsb.edu](mailto::scsik@ucsb.edu)  
-**Learn more:** [samanthacsik.github.io](https://samanthacsik.github.io/){target="_blank"}
-**Student hours:** TBD @ Bren
+**Learn more:** [samanthacsik.github.io](https://samanthacsik.github.io/){target="_blank"}   
+**Student hours:** Tuesdays, 12:00 - 1:00pm @ Pine Room (Bren 3526)
 :::
 
 :::
@@ -238,7 +240,7 @@ knitr::include_graphics("images/week1/eds240-website.png")
 ```
 
 ::: {.body-text-m .center-text}
-Link is also bookmarked at the top of the **#eds-240-data-viz** Slack channel and linked on the [Courses page](https://ucsb-meds.github.io/courses.html){target="_blank"} of the MEDS website.
+Link is also bookmarked at the top of the **#eds-240-data-viz** Slack channel and on the [Bren website](https://bren.ucsb.edu/courses/eds-240){target="_blank"}.
 :::
 
 ---
