--- a/course-materials/discussion/week6/week6-slides.qmd
+++ b/course-materials/discussion/week6/week6-slides.qmd
@@ -23,6 +23,397 @@ editor_options:
 
 ---
 
+## {#left-off-qmd data-menu-title="Where we left off"}
+
+[Where we left off . . .]{.slide-title}
+
+<hr>
+
+We iterated on our salary plot by updating colors, theme elements, and most notably, our fonts. It rendered nicely in our Quarto doc, with the help of a couple code chunk options to set the size (`out-width: "100%"`) and aspect ratio (`fig-asp: 1`):
+
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/set-chunk-options.png")
+```
+
+---
+
+## {#left-off-png data-menu-title="Where we left off"}
+
+[Where we left off . . .]{.slide-title}
+
+<hr>
+
+However, when we tried saving our plot as a PNG file using `ggsave()`, we got something that looked quite different:
+
+:::: {.columns}
+
+::: {.column width="50%"}
+<br>
+```{r}
+#| eval: false 
+#| echo: true
+ggsave(
+  filename = here::here("week6", "images", "salary_plot.png"),
+  plot = updated_plot,
+  device = "png",
+  width = 8, 
+  height = 7,
+  unit = "in"
+)
+```
+:::
+
+::: {.column width="50%"}
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "80%"
+#| fig-align: "center"
+knitr::include_graphics("images/0-needs-improvment-8x7.png")
+```
+:::
+
+::::
+
+::: {.center-text}
+To understand why this happens and how to fix this, we first need to understand a bit about image size and resolution.
+:::
+
+---
+
+## {#resolution data-menu-title="Resolution"}
+
+[Understanding image size & resolution]{.slide-title}
+
+<hr>
+
+Digital image size is described in pixel (px) dimensions (e.g. 2400 x 2100 px). A pixel is a basic (and smallest) unit of programmable color on a computer display. To calculate pixel dimensions, we need to know:
+
+- the **height** of the image (e.g. in inches)
+- the **resolution** of the image (in pixels per inch, PPI)
+- the **width** of the image (e.g. in inches)
+
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/pixels.png")
+```
+
+::: {.footer}
+Image source: [What are 'Image Size' and 'Resolution'?](https://twinbru.zendesk.com/hc/en-nz/articles/4403275762708-What-are-Image-Size-and-Resolution){target="_blank"}
+:::
+
+---
+
+## {#dpi data-menu-title="DPI"}
+
+[For us, PPI == DPI]{.slide-title}
+
+<hr>
+
+Printed image resolution is represented as dots per inch (DPI), which refers to the literal printed dots of ink per inch. While PPI and DPI are technically different, they are often used interchangeably and the conversion is generally taken as 1 PPI : 1 DPI. **We will use PPI and DPI interchangeably.**
+
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/dpi.png")
+```
+
+::: {.footer}
+Image source: [What is DPI?](https://www.printplace.com/blog/what-is-dpi/){target="_blank"}
+:::
+
+---
+
+## {#different-dpi data-menu-title="Different DPI"}
+
+[Issue #1: mismatched DPIs]{.slide-title}
+
+<hr>
+
+`{showtext}` uses a default DPI value of 96 to render our plot on screen, while `ggsave()` uses a default DPI of 300 to write our plot to file. This mismatch in resolutions is one major cause of inconsistent font renderings across different devices. Ensure that these match:
+
+. . . 
+
+1. **Set the `{showtext}` DPI** (best to do this at the top of your script):
+
+```{r}
+#| eval: false
+#| echo: true
+#| code-line-numbers: "3"
+#................enable {showtext} for rendering.................
+showtext_auto()
+showtext_opts(dpi = 300)
+```
+
+. . . 
+
+2. (Optional) **Set the DPI in `ggsave()`** (300 is the default, so this step is optional):
+
+```{r}
+#| eval: false
+#| echo: true
+ggsave(
+  filename = here::here("week6", "images", "salary-plot-8x7.png"),
+  plot = updated_plot,
+  device = "png",
+  width = 8,
+  height = 7,
+  unit = "in",
+  dpi = 300
+)
+```
+
+::: {.footer}
+An image is generally considered "high-resolution" if it has 300+ PPI. The [conversion of PPI to DPI is usually 1:1](https://www.adobe.com/uk/creativecloud/photography/discover/dots-per-inch-dpi-resolution.html#:~:text=The%20conversion%20of%20PPI%20to%20DPI%20is%20usually%201%3A1.){target="_blank"}, we'll set a DPI of 300 for both `{showtext}` and `ggsave()`.
+:::
+
+---
+
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/1-DPI300.png")
+```
+
+::: {.center-text .body-text-m}
+That largely took care of our font sizing issue! But our `{ggtext}` elements look super wonky...
+:::
+
+---
+
+## {#debug-ggtext data-menu-title="Debug {ggtext}"}
+
+[Debug with `fill` color]{.slide-title}
+
+<hr>
+
+Recall that `ggtext::element_textbox()` enables Markdown text **in a box** with word wrap. Let's temporarily fill this box with color, then save using `ggsave()` to see its exact size:
+
+```{r}
+#| eval: false
+#| echo: true
+#| code-line-numbers: "14,19"
+updated_plot <- plot +
+  labs(title = "Males earn more than females across most occupations",
+       subtitle = subtitle,
+       caption = caption) +
+  theme_minimal() +
+  theme(
+    plot.title.position = "plot",
+    plot.title = element_text(family = "josefin",
+                              face = "bold",
+                              size = 18),
+    plot.subtitle = ggtext::element_textbox(family = "sen",
+                                            size = 11.5,
+                                            color = earnings_pal["light_text"],
+                                            fill = "lightblue", # for debugging 
+                                            margin = margin(t = 2, r = 0, b = 6, l = 0)),
+    plot.caption = ggtext::element_textbox(family = "sen",
+                                           face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
+                                           color = earnings_pal["light_text"],
+                                           fill = "lightblue", # for debugging
+                                           halign = 1, 
+                                           lineheight = 1.5,
+                                           margin = margin(t = 15, r = 0, b = 0, l = 0)),
+    strip.text.x = element_text(family = "josefin",
+                                face = "bold",
+                                size = 10,
+                                hjust = 0),
+    panel.spacing.y = unit(0.5, "cm"),
+    axis.text = element_text(family = "sen",
+                             size = 9,
+                             color = earnings_pal["light_text"]),
+    axis.title = element_blank()
+  )
+
+updated_plot
+```
+
+---
+
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/2-fill.png")
+```
+
+::: {.center-text .body-text-m}
+When written to a PNG file, these `element_textbox()`es are much too small, causing our text to wrap onto itself.
+:::
+
+---
+
+## {#textbox-width data-menu-title="Increase textbox width"}
+
+[Let's try increasing our textbox `width`]{.slide-title}
+
+<hr>
+
+```{r}
+#| eval: false
+#| echo: true
+#| code-line-numbers: "15,23"
+updated_plot <- plot +
+  labs(title = "Males earn more than females across most occupations",
+       subtitle = subtitle,
+       caption = caption) +
+  theme_minimal() +
+  theme(
+    plot.title.position = "plot",
+    plot.title = element_text(family = "josefin",
+                              face = "bold",
+                              size = 18),
+    plot.subtitle = ggtext::element_textbox(family = "sen",
+                                            size = 11.5,
+                                            color = earnings_pal["light_text"],
+                                            fill = "lightblue", # for debugging 
+                                            width = unit(25, "cm"),
+                                            margin = margin(t = 2, r = 0, b = 6, l = 0)),
+    plot.caption = ggtext::element_textbox(family = "sen",
+                                           face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
+                                           color = earnings_pal["light_text"],
+                                           fill = "lightblue", # for debugging
+                                           halign = 1, 
+                                           lineheight = 1.5,
+                                           width = unit(25, "cm"),
+                                           margin = margin(t = 15, r = 0, b = 0, l = 0)),
+    strip.text.x = element_text(family = "josefin",
+                                face = "bold",
+                                size = 10,
+                                hjust = 0),
+    panel.spacing.y = unit(0.5, "cm"),
+    axis.text = element_text(family = "sen",
+                             size = 9,
+                             color = earnings_pal["light_text"]),
+    axis.title = element_blank()
+  )
+
+updated_plot
+```
+
+---
+
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/3-fill-wide.png")
+```
+
+::: {.center-text .body-text-m}
+We successfully increased the width of our two textboxes, but they appear quite narrow and our text still isn't expanded correctly.
+:::
+
+---
+
+## {#padding data-menu-title="Increase textbox padding"}
+
+[Next, let's increase textbox `padding`]{.slide-title}
+
+<hr>
+
+While `margin` sets the space *around* a textbox, `padding` sets the space around the text *inside* a textbox. Let's increase the padding around the top and bottom of our subtitle and caption:
+
+```{r}
+#| eval: false
+#| echo: true
+#| code-line-numbers: "17,26"
+updated_plot <- plot +
+  labs(title = "Males earn more than females across most occupations",
+       subtitle = subtitle,
+       caption = caption) +
+  theme_minimal() +
+  theme(
+    plot.title.position = "plot",
+    plot.title = element_text(family = "josefin",
+                              face = "bold",
+                              size = 18),
+    plot.subtitle = ggtext::element_textbox(family = "sen",
+                                            size = 11.5,
+                                            color = earnings_pal["light_text"],
+                                            fill = "lightblue", # for debugging 
+                                            width = unit(25, "cm"),
+                                            margin = margin(t = 2, r = 0, b = 6, l = 0),
+                                            padding = margin(t = 5, r = 0, b = 5, l = 0)),
+    plot.caption = ggtext::element_textbox(family = "sen",
+                                           face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
+                                           color = earnings_pal["light_text"],
+                                           fill = "lightblue", # for debugging
+                                           halign = 1, 
+                                           lineheight = 1.5,
+                                           width = unit(25, "cm"),
+                                           margin = margin(t = 15, r = 0, b = 0, l = 0),
+                                           padding = margin(t = 10, r = 0, b = 10, l = 0)),
+    strip.text.x = element_text(family = "josefin",
+                                face = "bold",
+                                size = 10,
+                                hjust = 0),
+    panel.spacing.y = unit(0.5, "cm"),
+    axis.text = element_text(family = "sen",
+                             size = 9,
+                             color = earnings_pal["light_text"]),
+    axis.title = element_blank()
+  )
+
+updated_plot
+```
+
+---
+
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/4-padding.png")
+```
+
+::: {.center-text .body-text-m}
+Yay! Looking good. We can now comment out (or remove) `fill = "lightblue"` from both our `ggtext::element_textbox()`es.
+:::
+
+---
+
+```{r}
+#| eval: true 
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/5-remove-fill.png")
+```
+
+::: {.center-text .body-text-m}
+Our final saved PNG!
+:::
+
+---
+
+Now increase size to 14x12. What happens?
+
+everything gets smaller again. Why?
+
+---
+
+a. resize everything -- can get tedious
+b. add the `scale` parameter to `ggsave()`, which can increase or decrease plot size, while adjusting element sizes proportionally (e.g. `scale = 2` doubles the dimensions of the saved plot, `scale = 0.5` decreases the plots size by half) 
+  - also helpful when you want to maintain aspect ration and element sizeing while generatng higher or lower resoltuion images without having to resize each plot component individually
+  
+---
+
 ## {#tbd data-menu-title="tbd"}
 
 [Tbd]{.slide-title}
@@ -256,7 +647,6 @@ therefore:
 ---
 
 https://help.opencitiesplanner.bentley.com/index.html@p=2913.html#:~:text=Vector%20files%20are%20mathematical%2C%20made,or%20single%20points%20of%20colour.
-https://www.tidyverse.org/blog/2020/08/taking-control-of-plot-scaling/
 
 - absolute size: physical dimensions of graphic measured in cm, in, or other absolute length unit
 - pixel size: graphics are recorded as a matrix of color values; each cell in the matrix is a pixel; pixel size is the number of rows and cols in the matrix; pixels don't hjav
@@ -274,3 +664,14 @@ Strategies:
 - try reducing font `size`
 
 ---
+
+## {#additional-resources data-menu-title="Additional resources"}
+
+[Additional resources:]{.slide-title}
+
+<hr>
+
+- **[showtext: Using System Fonts in R Graphics](https://rjournal.github.io/articles/RJ-2015-008/)**, by Yixuan Qiu (an older article, but provides helpful context)
+- **[Understanding text size and resolution in ggplot2](https://www.christophenicault.com/post/understand_size_dimension_ggplot2/)**{target="_blank"}, by Christophe Nicault
+- **[Taking Control of Plot Scaling](https://www.tidyverse.org/blog/2020/08/taking-control-of-plot-scaling/)**, by Thomas Lin Pedersen
+
