--- a/course-materials/discussion/week6/week6-solution.qmd
+++ b/course-materials/discussion/week6/week6-solution.qmd
@@ -1,50 +1,10 @@
 ---
-title: "Lecture 6.1 KEY"
-subtitle: "Typography"
-author: "Your Name"
-date: 2025-02-10
-toc: true
-editor_options: 
-  chunk_output_type: inline
+title: "Week 6 Discussion: Solution"
+subtitle: "Saving plots"
+description: "Tuesday February 11^th^, 2025"
 ---
 
-::: {.callout-note}
-This template follows [lecture 6.1 slides](../lecture-slides/lecture6.1-typography-slides.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
-:::
-
-## System fonts
-
-```{r}
-#| eval: true
-#| echo: true
-#| warning: false
-#| message: false
-# import packages ---- 
-library(palmerpenguins)
-library(tidyverse)
-
-# create ggplot to demonstrate use of system fonts ----
-ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
-  geom_point() + 
-  labs(title = "This title is serif font",
-       subtitle = "This subtitle is mono font",
-       x = "This axis label is sans font\n(default)",
-       y = "This axis is also sans font\n(default)") +
-  theme(
-    plot.title = element_text(family = "serif", size = 30),
-    plot.subtitle = element_text(family = "mono", size = 25),
-    axis.title = element_text(family = "sans", size = 22),
-    axis.text.x = element_text(family = "serif", face = "bold", size = 18),
-    axis.text.y = element_text(family = "mono", face = "italic", size = 18)
-    )
-```
-
 ## Setup 
-
-::: {.callout-note}
-## Recall our original plot from [lecture 4.1](../lecture-slides/lecture4.1-rankings-slides.qmd){target="_blank"}
-Our "first draft" of this plot began in week 4 during our rankings lecture. We'll focus on improving colors and fonts today.
-:::
 
 ```{r}
 #| eval: true
@@ -73,18 +33,16 @@ font_add(family = "fa-regular",
 font_add(family = "fa-solid",
          regular = here::here("fonts", "Font Awesome 6 Free-Solid-900.otf"))
 
-#......enable {showtext} rendering for all newly opened GDs......
+#................enable {showtext} for rendering.................
 showtext_auto()
-showtext_opts(dpi = 300)
+showtext_opts(dpi = 300) #<1>
 
 #..........................import data...........................
-# find import code at: https://github.com/rfordatascience/tidytuesday/tree/master/data/2019/2019-03-05#grab-the-clean-data-here
 jobs <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-03-05/jobs_gender.csv")
 ```
+1. You'll want `{showtext}`'s rendering parameters to match those of `ggsave()`. Set both to a DPI of 300 (often used as a standard for quality print images).
 
 ## Wrangle data
-
-See lecture 4.1 slides [#4](../lecture-slides/lecture4.1-rankings-slides.qmd#job-data){target="_blank"}, [#5](../lecture-slides/lecture4.1-rankings-slides.qmd#data-wrangling){target="_blank"}, & [#17](../lecture-slides/lecture4.1-rankings-slides.qmd#dumbbell-plot-subset){target="_blank"} as reminders of where we left off.
 
 ```{r}
 #| eval: true
@@ -94,9 +52,9 @@ See lecture 4.1 slides [#4](../lecture-slides/lecture4.1-rankings-slides.qmd#job
 ##                                wrangle data                              ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-jobs_clean <- jobs |> 
-  
-  # add col with % men in a given occupation (% females in a given occupation was already included) ----
+jobs_clean <- jobs |>
+
+ # add col with % men in a given occupation (% females in a given occupation was already included) ----
   mutate(percent_male = 100 - percent_female) |>
          
   # rearrange columns ----
@@ -105,19 +63,19 @@ jobs_clean <- jobs |>
           percent_male, percent_female,
           total_earnings, total_earnings_male, total_earnings_female, 
           wage_percent_of_male) |> 
-  
-  # drop rows with missing earnings data ----
-  drop_na(total_earnings_male, total_earnings_female) |> 
-  
+
+  # drop rows with missing earning data ----
+  drop_na(total_earnings_male, total_earnings_female) |>
+
   # make occupation a factor (necessary for reordering groups in our plot) ----
-  mutate(occupation = as.factor(occupation)) |> 
- 
+  mutate(occupation = as.factor(occupation)) |>
+
   # classify jobs by percentage male or female (these will become facet labels in our plot) ----
   mutate(group_label = case_when(
     percent_female >= 75 ~ "Occupations that are 75%+ female",
     percent_female >= 45 & percent_female <= 55 ~ "Occupations that are 45-55% female",
     percent_male >= 75 ~ "Occupations that are 75%+ male"
-  )) 
+  ))
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                              create subset df                            ----
@@ -129,44 +87,46 @@ set.seed(0)
 #...............get random samples from each group...............
 
 # 10 random jobs that are 75%+ female (2016) ----
-f75 <- jobs_clean |> 
-  filter(year == 2016, group_label == "Occupations that are 75%+ female") |> 
+f75 <- jobs_clean |>
+  filter(year == 2016, group_label == "Occupations that are 75%+ female") |>
   slice_sample(n = 10)
 
 # 10 random jobs that are 75%+ male (2016) ----
-m75 <- jobs_clean |> 
-  filter(year == 2016, group_label == "Occupations that are 75%+ male") |> 
+m75 <- jobs_clean |>
+  filter(year == 2016, group_label == "Occupations that are 75%+ male") |>
   slice_sample(n = 10)
 
 # 10 random jobs that are 45-55%+ female (2016) ----
-f50 <- jobs_clean |> 
-  filter(year == 2016, group_label == "Occupations that are 45-55% female") |> 
+f50 <- jobs_clean |>
+  filter(year == 2016, group_label == "Occupations that are 45-55% female") |>
   slice_sample(n = 10)
 
 #.......combine dfs & relevel factors (for plotting order).......
-subset_jobs <- rbind(f75, m75, f50) |> 
+subset_jobs <- rbind(f75, m75, f50) |>
   mutate(group_label = fct_relevel(group_label, 
-                                   "Occupations that are 75%+ female", 
+                                   "Occupations that are 75%+ female",
                                    "Occupations that are 45-55% female", 
-                                   "Occupations that are 75%+ male")) 
+                                   "Occupations that are 75%+ male"))
 ```
 
 ## Recreate original plot 
-
-See [lecture 4.1](../lecture-slides/lecture4.1-rankings-slides.qmd#dumbbell-plot-create){target="_blank"} as a reminder.
 
 ```{r}
 #| eval: true
 #| echo: true
 #| warning: false
-# recreate original plot ----
+# original plot ----
 plot <- ggplot(subset_jobs) +
-  geom_segment(aes(x = total_earnings_female, xend = total_earnings_male,
-                 y = fct_reorder(occupation, total_earnings), yend = occupation)) +
+  geom_segment(aes(x = total_earnings_female, 
+                   xend = total_earnings_male,
+                   y = fct_reorder(occupation, total_earnings), 
+                   yend = occupation)) +
   geom_point(aes(x = total_earnings_male, y = occupation),
-             color = "#CD93D8", size = 3.25) +
+             color = "#CD93D8", 
+             size = 3.25) +
   geom_point(aes(x = total_earnings_female, y = occupation),
-             color = "#6A1E99", size = 3.25) +
+             color = "#6A1E99", 
+             size = 3.25) +
   facet_wrap(~group_label, nrow = 3, scales = "free_y") +
   scale_x_continuous(labels = scales::label_dollar(scale = 0.001, suffix = "k"),
                      breaks = c(25000, 50000, 75000, 100000, 125000))
@@ -196,10 +156,10 @@ monochromeR::view_palette(earnings_pal)
 #| eval: true
 #| echo: true
 #| warning: false
-# update plot colors using palette ----
+# apply updated colors ----
 plot <- ggplot(subset_jobs) +
   geom_segment(aes(x = total_earnings_female, xend = total_earnings_male,
-                 y = fct_reorder(occupation, total_earnings), yend = occupation)) +
+                   y = fct_reorder(occupation, total_earnings), yend = occupation)) +
   geom_point(aes(x = total_earnings_male, y = occupation),
              color = earnings_pal["males"], size = 3.25) +
   geom_point(aes(x = total_earnings_female, y = occupation),
@@ -211,14 +171,15 @@ plot <- ggplot(subset_jobs) +
 plot
 ```
 
-## Add titles & theme {#titles-theme}
+## Add titles & theme
 
 ```{r}
 #| eval: true
 #| echo: true
 #| warning: false
-#| out-width: "100%"
+#| message: false
 #| fig-asp: 1
+#| out-width: "100%"
 #.........................create caption.........................
 github_icon <- "&#xf09b"
 github_username <- "samanthacsik"
@@ -232,45 +193,104 @@ caption <- glue::glue(
 #........................create subtitle.........................
 money_icon <- "&#xf3d1"
 
-subtitle <- glue::glue("<span style='font-family:fa-regular;'>{money_icon};</span>
-                       Median earnings of full-time 
-                       <span style='color:#2D7787;'>**male**</span> versus 
+subtitle <- glue::glue("Median earnings 
+                       <span style='font-family:fa-regular;'>{money_icon};</span>
+                       of full-time
+                       <span style='color:#2D7787;'>**male**</span> 
+                       versus 
                        <span style='color:#FC6B4B;'>**female**</span>
                        workers by occupation in 2016")
 
-#..........................updated plot..........................
-salary_plot <-plot +
+#..........................modify plot...........................
+updated_plot <- plot +
   labs(title = "Males earn more than females across most occupations",
        subtitle = subtitle,
        caption = caption) +
   theme_minimal() +
   theme(
     plot.title.position = "plot",
-    plot.title = element_text(family = "josefin", 
+    plot.title = element_text(family = "josefin",
                               face = "bold",
-                              size = 18,
-                              color = earnings_pal["dark_text"]),
+                              size = 18),
     plot.subtitle = ggtext::element_textbox(family = "sen",
-                                            size = 12,
+                                            size = 11.5,
                                             color = earnings_pal["light_text"],
-                                            margin = margin(t = 2, r = 0, b = 6, l = 0)),
-    plot.caption = ggtext::element_textbox(family = "sen", 
-                                           face = "italic",
+                                            #fill = "lightblue", # for debugging #<1>
+                                            width = unit(25, "cm"),
+                                            margin = margin(t = 2, r = 0, b = 6, l = 0),
+                                            padding = margin(t = 5, r = 0, b = 5, l = 0)),
+    plot.caption = ggtext::element_textbox(family = "sen",
+                                           face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
                                            color = earnings_pal["light_text"],
-                                           halign = 1,
+                                           #fill = "lightblue", # for debugging 
+                                           halign = 1, 
                                            lineheight = 1.5,
-                                           margin = margin(t = 15, r = 0, b = 0, l = 0)),
+                                           width = unit(20, "cm"),
+                                           margin = margin(t = 15, r = 0, b = 0, l = 0),
+                                           padding = margin(t = 10, r = 0, b = 10, l = 0)),
     strip.text.x = element_text(family = "josefin",
                                 face = "bold",
                                 size = 10,
                                 hjust = 0),
-    panel.spacing.y = unit(x = 0.5, units = "cm"),
-    axis.text = element_text(size = 9,
+    panel.spacing.y = unit(0.5, "cm"),
+    axis.text = element_text(family = "sen",
+                             size = 9,
                              color = earnings_pal["light_text"]),
     axis.title = element_blank()
   )
 
-salary_plot
+updated_plot
+```
+1. Adding fill color to `ggtext::element_textbox()`s can help to identify if the size is as intended once saved using `ggsave()` 
+
+::: {.callout-note}
+## Reminder: build your viz for your desired output!
+Notice that making these modifications means we get a plot that doesn't render as nicely in our Quarto doc (e.g. y-axis text feels a bit more crowded, some of the panel strip text gets cut off). This is a good reminder that your final desired output format will influence how you build / modify your plot!
+:::
+
+## Save plots using `ggsave()`
+
+### 8"x7" plot
+
+```{r}
+#| eval: false
+#| echo: true
+# save 8"x7" png ---
+ggsave(
+  filename = here::here("week6", "images", "salary-plot-8x7.png"),
+  plot = updated_plot,
+  device = "png",
+  width = 8,
+  height = 7,
+  unit = "in",
+  dpi = 300, #<1>
+  create.dir = TRUE #<2> 
+)
+```
+1. Default DPI is 300 (so you don't *need* to explicitly include this argument)
+2. Creates a new directory at specified file path 
+
+### 14"x12" plot
+
+```{r}
+#| eval: false
+#| echo: true
+# save 14"x12" png ---
+ggsave(
+  filename = here::here("week6", "images", "salary-plot-14x12.png"),
+  plot = updated_plot,
+  device = "png",
+  width = 14, 
+  height = 12,
+  unit = "in",
+  dpi = 300,
+  scale = 0.6
+)
 ```
 
+## Turn off showtext rendering
 
+```{r}
+# turn off showtext text rendering ----
+showtext_auto(FALSE)
+```
