--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -82,7 +82,7 @@ knitr::include_graphics(here::here("images", "horst-ggplot-masterpiece.png"))
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [D6 slides: saving plots???](discussion/week6/week6-slides.qmd) | tbd | tbd |
+| [D6 slides: saving plots](discussion/week6/week6-slides.qmd) | *see slides* | [D6 solution](discussion/week6/week6-solution.qmd) |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
