--- a/course-materials/lecture-slides/lecture5.2-colors-slides.qmd
+++ b/course-materials/lecture-slides/lecture5.2-colors-slides.qmd
@@ -866,41 +866,53 @@ knitr::include_graphics("images/week5/paletteer.png")
 
 <hr>
 
-Browse the extensive list of supported palette packages in the [**`{paletter}` documentation**](https://emilhvitfeldt.github.io/paletteer/#included-packages){target="_blank"}, on the [**r-color-palettes**](https://github.com/EmilHvitfeldt/r-color-palettes){target="_blank"} GitHub repo, or on the [**R Color Palettes**](https://emilhvitfeldt.github.io/r-color-palettes/){target="_blank"} website.
+There are a number of ways to browse the extensive list of supported palette packages, including in the [**`{paletter}` documentation**](https://emilhvitfeldt.github.io/paletteer/#included-packages){target="_blank"}, on the [**r-color-palettes**](https://github.com/EmilHvitfeldt/r-color-palettes){target="_blank"} GitHub repo, on the [**R Color Palettes**](https://emilhvitfeldt.github.io/r-color-palettes/){target="_blank"} website, or my personal favorite, the [**R-Graph Gallery's Color Palette Finder**](https://r-graph-gallery.com/color-palette-finder){target="_blank"} (built on `{paletteer}`; see below).
 
-:::: {.columns}
-
-::: {.column width="50%"}
-
-::: {.center-text .body-text-s .gray-text}
-Find discrete palettes on the **[R Color Palettes](https://emilhvitfeldt.github.io/r-color-palettes/){target="_blank"}** website
-:::
+<!-- ::: {.center-text .body-text-s .gray-text} -->
+<!-- The **[R-Graph Gallery's Color Palette Finder**](https://r-graph-gallery.com/color-palette-finder){target="_blank"} provides an easy interface for exploring supported `{paletteer}` palettes. You can also simulate vision deficiencies and find code for building the example visualizations.  -->
+<!-- ::: -->
 
 ```{r}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
 #| out-width: "60%"
-knitr::include_graphics("images/week5/r-color-palettes.png")
+knitr::include_graphics("images/week5/r-graph-gallery-paletteer.gif")
 ```
-:::
 
-::: {.column width="50%"}
+<!-- :::: {.columns} -->
 
-::: {.center-text .body-text-s .gray-text}
-Click on any palette for more information & example plots 
-:::
+<!-- ::: {.column width="50%"} -->
 
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "60%"
-knitr::include_graphics("images/week5/wesanderson.png")
-```
-:::
+<!-- ::: {.center-text .body-text-s .gray-text} -->
+<!-- Find discrete palettes on the **[R Color Palettes](https://emilhvitfeldt.github.io/r-color-palettes/){target="_blank"}** website -->
+<!-- ::: -->
 
-::::
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| fig-align: "center" -->
+<!-- #| out-width: "60%" -->
+<!-- knitr::include_graphics("images/week5/r-color-palettes.png") -->
+<!-- ``` -->
+<!-- ::: -->
+
+<!-- ::: {.column width="50%"} -->
+
+<!-- ::: {.center-text .body-text-s .gray-text} -->
+<!-- Click on any palette for more information & example plots  -->
+<!-- ::: -->
+
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| fig-align: "center" -->
+<!-- #| out-width: "60%" -->
+<!-- knitr::include_graphics("images/week5/wesanderson.png") -->
+<!-- ``` -->
+<!-- ::: -->
+
+<!-- :::: -->
 
 ```{r}
 countdown::countdown(
