--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -102,7 +102,7 @@ Oftentimes, packages that are built to interface with APIs will include their ow
 
 1. Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week2/` folder. 
 
-2. Review the data wrangling code under the `# Setup` section of each template file and make note of any questions you might have. Due to time constraints, we won't be live-coding our way through the data wrangling code in class. However, we'll reserve some time to answer any questions before we jump into data viz {{< fa face-smile title="a smiling face" >}}.
+2. Review the data wrangling code under the `## Setup` section of each template file and make note of any questions you might have. Due to time constraints, we won't be live-coding our way through the data wrangling code in class. However, we'll reserve some time to answer any questions before we jump into data viz {{< fa face-smile title="a smiling face" >}}.
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
@@ -134,11 +134,11 @@ Install the [ColorPick Eyedropper](https://chrome.google.com/webstore/detail/col
 | Assignment Type | Assignment Title         | Date Assigned  | Date Due                   |
 |-----------------|--------------------------|----------------|----------------------------|
 | EOC             | EOC (week 2)             | Mon 01/06/2025 | Mon 01/06/2025, 11:55pm PT |
-| HW              | Homework Assignment #1   | Mon 01/06/2025 | Sat 01/18/2025, 11:59pm PT |
+| HW              | Homework Assignment #1   | Tue 01/07/2025 | Tue 01/21/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"} 
 
 <!-- | Assignment Type | Assignment Title                                  | Date Assigned  | Date Due                   | -->
 <!-- |-----------------|---------------------------------------------------|----------------|----------------------------| -->
 <!-- | EOC             | [EOC (week 2)](https://forms.gle/G5DbEAxKCxyaCZyB8)  | Mon 01/13/2024 | Mon 01/13/2024, 11:55pm PT | -->
-<!-- | HW              | [Homework Assignment #1](assignments/HW1.qmd)  | Mon 01/06/2025 | Sat 01/18/2025, 11:59pm PT | -->
+<!-- | HW              | [Homework Assignment #1](assignments/HW1.qmd)  | Tue 01/07/2025 | Tue 01/21/2025, 11:59pm PT | -->
 <!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"}  -->
