--- a/course-materials/week7.qmd
+++ b/course-materials/week7.qmd
@@ -86,10 +86,10 @@ knitr::include_graphics(here::here("images", "horst-happy-castle.png"))
 
 | Assignment Type | Assignment Title       | Date Assigned  | Date Due                   |
 |-----------------|------------------------|----------------|----------------------------|
-| HW              | Homework Assignment #3 | Mon 02/10/2025 | Sat 02/22/2025, 11:59pm PT |
+| HW              | Homework Assignment #3 | Tue 02/25/2025 | Sat 02/22/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
-<!-- | Assignment Type | Assignment Title                                                 | Date Assigned  | Date Due        | -->
-<!-- |-----------------|-------------------------------------------------------|----------------|----------------------------| -->
-<!-- | HW              | [Homework Assignment #3](assignments/HW3.qmd)      | Mon 02/10/2025 | Sat 02/22/2025, 11:59pm PT | -->
+<!-- | Assignment Type | Assignment Title                                      | Date Assigned  | Date Due                    | -->
+<!-- |-----------------|-------------------------------------------------------|----------------|-----------------------------| -->
+<!-- | HW              | [Homework Assignment #3](assignments/HW3.qmd)      | Tue 02/11/2025 | Sat Tue 02/25/2025, 11:59pm PT | -->
 <!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"} -->
