--- a/resources.qmd
+++ b/resources.qmd
@@ -114,6 +114,7 @@ toc: true
 | [Ryan Hart](https://github.com/curatedmess) | [TidyTuesday](https://github.com/curatedmess/TidyTuesday)|
 | [Georgios Karamanis](https://karaman.is/) | [tidytuesday](https://github.com/gkaramanis/tidytuesday)
 | [Jake Kaupp](https://github.com/jkaupp) | [tidytuesdays](https://github.com/jkaupp/tidytuesdays) |
+| [Blake R Mills](https://github.com/BlakeRMills) | [TidyTuesday](https://github.com/BlakeRMills/TidyTuesday) |
 | [Danielle Navarro](https://djnavarro.net/) | generative art outputs from multiple repos can be found on Danielle's website's [Gallery](https://art.djnavarro.net/gallery/) |
 | [Cristophe Nicault](https://www.christophenicault.com/) | [tidytuesday](https://github.com/cnicault/tidytuesday) |
 | [Dan Oehm](https://gradientdescending.com/) | [tidytues](https://github.com/doehm/tidytues) |
