--- a/assignments.qmd
+++ b/assignments.qmd
@@ -8,17 +8,17 @@ title-block-banner: true
 
 Earning "Satisfactory" marks on Self-reflections (SRs) and Homework Assignments (HWs) will determine your letter grade (e.g. A, B, etc.) for this course. **All SRs and HWs are due at 11:59pm** on the dates specified, below:
 
-| Assignment Type         | Assignment Title                      | Date Assigned  | Date Due       |
-|:------------------------|---------------------------------------|----------------|----------------|
-| SR                      | Pre-course reflection (SR #1)         | Mon 01/06/2025 | Sat 01/11/2025 |
-| HW                      | Homework Assignment #1                | Mon 01/06/2025 | Sat 01/18/2025 |
-| HW                      | Homework Assignment #2                | Mon 01/20/2025 | Sat 02/01/2025 |
-| SR                      | Mid-course reflection (SR #2)         | Mon 02/03/2025 | Sat 02/08/2025 |
-| HW                      | Homework Assignment #3                | Mon 02/10/2025 | Sat 02/22/2025 |
-| HW                      | Homework Assignment #4                | Mon 01/06/2025 | Sat 03/08/2025 |
-| SR                      | End-of-course reflection (SR #3)      | Mon 03/10/2025 | Sat 03/15/2025 |
+| Assignment Type         | Assignment Title                      | Date Assigned   | Date Due           |
+|:------------------------|---------------------------------------|----------------|---------------------|
+| SR                      | Pre-course reflection (SR #1)         | Mon 01/06/2025 | Sat 01/11/2025      |
+| HW                      | Homework Assignment #1                | Tue 01/07/2025 | Tue 01/21/2025      |
+| HW                      | Homework Assignment #2                | Tue 01/21/2025 | Tue 02/04/2025      | 
+| SR                      | Mid-course reflection (SR #2)         | Mon 02/03/2025 | Sat 02/08/2025      |
+| HW                      | Homework Assignment #3                | Tue 02/11/2025 | Tue 02/25/2025      | 
+| HW                      | Homework Assignment #4                | Tue 02/25/2025 | Tue 03/11/2025      | 
+| SR                      | End-of-course reflection (SR #3)      | Mon 03/10/2025 | Sat 03/15/2025      |
 | HW (final presentation) | Homework Assignment #4 (presentation) | *NA*           | *TBD (finals week)* |
-
+: {tbl-colwidths="[22,38,20,20]"} 
 
 <!-- ::: {.callout-important} -->
 <!-- ## Please note: HW #4 is spread out across the entire quarter and includes a finals week presentation -->
