--- a/course-materials/keys/KEY-lecture6.2-annotations.qmd
+++ b/course-materials/keys/KEY-lecture6.2-annotations.qmd
@@ -41,6 +41,7 @@ lobs <- googlesheets4::read_sheet("https://docs.google.com/spreadsheets/d/1DkDVc
 ```
 
 ### Create base plot
+
 ```{r}
 #| eval: true
 #| echo: true
@@ -50,19 +51,22 @@ lob_theme <- function(){
   theme_light() +
     theme(
       axis.title.x = ggtext::element_markdown(size = 16,
-                                              margin = margin(t = 10, r = 0, b = 0, l = 0),
-                                              lineheight = 1.5),
+                                              lineheight = 1.5,
+                                              margin = margin(t = 10, r = 0, b = 0, l = 0)),
       axis.title.y = ggtext::element_markdown(size = 16,
-                                              margin = margin(t = 0, r = 10, b = 0, l = 0),
-                                              lineheight = 1.5),
-      axis.text = element_text(color = "black", size = 14),
-      panel.border = element_rect(colour = "black", linewidth = 0.7),
+                                              lineheight = 1.5,
+                                              margin = margin(t = 0, r = 10, b = 0, l = 0)),
+      axis.text = element_text(color = "black", 
+                               size = 14),
+      axis.ticks = element_line(color = "black"),
+      panel.border = element_rect(colour = "black", 
+                                  linewidth = 0.7),
       panel.grid = element_blank(),
       legend.title = element_text(size = 15),
       legend.text = element_text(size = 13),
       legend.position = c(0.95, 0.95),
       legend.justification = c(0.95, 0.95),
-      legend.box.background = element_rect(color = "black", linewidth = 0.9)
+      legend.box.background = element_rect(linewidth = 0.9)
     )
 }
 
@@ -336,204 +340,3 @@ ggplot(data = mono, aes(x = year, y = lake_level)) +
     plot.caption = element_text(face = "italic")
     )
 ```
-
-## BONUS: annotating a faceted plot
-
-::: {.callout-note collapse=true}
-## Unfold to see example using our salary plot from lecture 6.1
-
-```{r}
-#| eval: true
-#| echo: true
-#| warning: false
-#| message: false
-#| out-width: "100%"
-#| fig-asp: 1
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-##                                    setup                                 ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-#..........................load packages.........................
-library(tidyverse)
-library(showtext)
-
-#..........................import data...........................
-jobs <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-03-05/jobs_gender.csv")
-
-#..........................import fonts..........................
-font_add_google(name = "Josefin Sans", family = "josefin")
-font_add_google(name = "Sen", family = "sen")
-
-#....................import Font Awesome fonts...................
-font_add(family = "fa-brands",
-         regular = here::here("fonts", "Font Awesome 6 Brands-Regular-400.otf"))
-font_add(family = "fa-regular",
-         regular = here::here("fonts", "Font Awesome 6 Free-Regular-400.otf")) 
-font_add(family = "fa-solid",
-         regular = here::here("fonts", "Font Awesome 6 Free-Solid-900.otf"))
-
-#................enable {showtext} for rendering.................
-showtext_auto()
-
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-##                                wrangle data                              ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-jobs_clean <- jobs |>
-
-  # add cols (needed for dumbbell plot) ----
-  mutate(percent_male = 100 - percent_female, # % of females within each industry was already included
-       difference_earnings = total_earnings_male - total_earnings_female) |>  # diff in earnings between M & F
-
-  # rearrange columns ----
-  relocate(year, major_category, minor_category, occupation,
-           total_workers, workers_male, workers_female,
-           percent_male, percent_female,
-           total_earnings, total_earnings_male, total_earnings_female, difference_earnings,
-           wage_percent_of_male) |>
-
-  # drop rows with missing earning data ----
-  drop_na(total_earnings_male, total_earnings_female) |>
-
-  # make occupation a factor ----
-  mutate(occupation = as.factor(occupation)) |>
-
-# ---- this next step is for creating our dumbbell plots ----
-
-# classify jobs by percentage male or female ----
-  mutate(group_label = case_when(
-    percent_female >= 75 ~ "Occupations that are 75%+ female",
-    percent_female >= 45 & percent_female <= 55 ~ "Occupations that are 45-55% female",
-    percent_male >= 75 ~ "Occupations that are 75%+ male"
-  ))
-
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-##                              create subset df                            ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-#....guarantee the same random samples each time we run code.....
-set.seed(0)
-
-#.........get 10 random jobs that are 75%+ female (2016).........
-f75 <- jobs_clean |>
-  filter(year == 2016, group_label == "Occupations that are 75%+ female") |>
-  slice_sample(n = 10)
-
-#..........get 10 random jobs that are 75%+ male (2016)..........
-m75 <- jobs_clean |>
-  filter(year == 2016, group_label == "Occupations that are 75%+ male") |>
-  slice_sample(n = 10)
-
-#........get 10 random jobs that are 45-55%+ female (2016).......
-f50 <- jobs_clean |>
-  filter(year == 2016, group_label == "Occupations that are 45-55% female") |>
-  slice_sample(n = 10)
-
-#.......combine dfs & relevel factors (for plotting order).......
-subset_jobs <- rbind(f75, m75, f50) |>
-  mutate(group_label = fct_relevel(group_label, 
-                                   "Occupations that are 75%+ female",
-                                   "Occupations that are 45-55% female", 
-                                   "Occupations that are 75%+ male"))
-
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-##                                create plot                               ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-#..........................build palette.........................
-earnings_pal <- c("males" = "#2D7787",
-                  "females" = "#FC6B4B",
-                  dark_text = "#0C1509",
-                  light_text = "#4E514D") 
-
-#.........................create caption.........................
-github_icon <- "&#xf09b"
-github_username <- "samanthacsik"
-
-caption <- glue::glue(
-  "Data Source: TidyTuesday (March 5, 2019) |
-  <span style='font-family:fa-brands;'>{github_icon};</span>
-  {github_username}"
-)
-
-#........................create subtitle.........................
-money_icon <- "&#xf3d1"
-
-subtitle <- glue::glue("Median earnings <span style='font-family:fa-regular;'>{money_icon};</span>
-                       of full-time
-                       <span style='color:#2D7787;font-size:20pt;'>**male**</span>
-                       versus <span style='color:#FC6B4B;font-size:20pt;'>**female**</span>
-                       workers by occupation in 2016")
-
-#.................create df with annotation info.................
-facet_labs <- data.frame(my_text = c("<span style='color:#2D7787;'>**Males**</span> **make $23,644 more than** <span style='color:#FC6B4B;'>**females**</span> in this female-dominated occupation",
-                                     "Male & female probation officers & correctional treatment specialists make about the same",
-                                     "Here's another annotation with a horizontal arrow"), 
-                         group_label = c("Occupations that are 75%+ female", "Occupations that are 45-55% female", "Occupations that are 75%+ male"),
-                         x = c(70000, 55000, 65000),
-                         y = c(5, 3, 5),
-                         arrow_x = c(80000, 48500, 60000),
-                         arrow_xend = c(80000, 48500, 37500),
-                         arrow_y = c(6, 4, 5),
-                         arrow_yend = c(10, 6.5, 5)) |>
-  mutate(group_label = fct_relevel(group_label, "Occupations that are 75%+ female",
-                                   "Occupations that are 45-55% female", "Occupations that are 75%+ male"))
-
-
-#..........................create plot...........................
-ggplot(subset_jobs) +
-  geom_segment(aes(x = total_earnings_female, xend = total_earnings_male,
-                   y = fct_reorder(occupation, total_earnings), yend = occupation)) +
-  geom_point(aes(x = total_earnings_male, y = occupation),
-             color = earnings_pal["males"], size = 3.25) +
-  geom_point(aes(x = total_earnings_female, y = occupation),
-             color = earnings_pal["females"], size = 3.25) +
-  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
-  scale_x_continuous(labels = scales::label_dollar(scale = 0.001, suffix = "k"),
-                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
-  labs(title = "Males earn more than females across most occupations",
-       subtitle = subtitle,
-       caption = caption) +
-  geom_segment(
-    data = facet_labs,
-    mapping = aes(x = arrow_x, xend = arrow_xend,
-                  y = arrow_y, yend = arrow_yend),
-    linewidth = 1, arrow = arrow(length = unit(0.3, "cm"))
-    ) +
-  # geom_label(
-  #   data = facet_labs,
-  #   mapping = aes(x = text_x, y = text_y, label = my_text),
-  #   size = 3,
-  #   hjust = "left"
-  #   ) +
-  ggtext::geom_textbox(data = facet_labs,
-                       mapping = aes(x = x, y = y, label = my_text),
-                       size = 3,
-                       family = "sen") +
-  theme_minimal() +
-  theme(
-    plot.title.position = "plot",
-    plot.title = element_text(family = "josefin",
-                              face = "bold",
-                              size = 25,
-                              color = earnings_pal["dark_text"]),
-    plot.subtitle = ggtext::element_textbox_simple(family = "sen",
-                                                   size = 17,
-                                                   color = earnings_pal["light_text"],
-                                                   margin = margin(t = 0.5, r = 0, b = 1, l = 0, unit = "lines")),
-    plot.caption = ggtext::element_textbox(family = "sen",
-                                           face = "italic",
-                                           color = earnings_pal["light_text"],
-                                           margin = margin(t = 3, r = 0, b = 0, l = 0, unit = "lines")),
-    strip.text.x = element_text(family = "josefin",
-                                face = "bold",
-                                size = 12,
-                                hjust = 0),
-    panel.spacing.y = unit(x = 1, "lines"),
-    axis.text = element_text(family = "sen",
-                             color = earnings_pal["light_text"]),
-    axis.text.x = element_text(size = 10),
-    axis.title = element_blank()
-  )
-```
-:::
