--- a/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
+++ b/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
@@ -952,8 +952,10 @@ monochromeR::view_palette(earnings_pal)
 #| out-width: "100%"
 #| code-line-numbers: "5,7"
 plot <- ggplot(subset_jobs) +
-  geom_segment(aes(x = total_earnings_female, xend = total_earnings_male,
-                   y = fct_reorder(occupation, total_earnings), yend = occupation)) +
+  geom_segment(aes(x = total_earnings_female, 
+                   xend = total_earnings_male,
+                   y = fct_reorder(occupation, total_earnings), 
+                   yend = occupation)) +
   geom_point(aes(x = total_earnings_male, y = occupation),
              color = earnings_pal["males"], size = 3.25) +
   geom_point(aes(x = total_earnings_female, y = occupation),
@@ -1678,8 +1680,10 @@ updated_plot
 #| fig-asp: 0.9
 #| out-height: "100%"
 ggplot(subset_jobs) +
-  geom_segment(aes(x = total_earnings_female, xend = total_earnings_male,
-                 y = fct_reorder(occupation, total_earnings), yend = occupation)) +
+  geom_segment(aes(x = total_earnings_female, 
+                   xend = total_earnings_male,
+                   y = fct_reorder(occupation, total_earnings), 
+                   yend = occupation)) +
   geom_point(aes(x = total_earnings_male, y = occupation),
              color = "#CD93D8", size = 3.25) +
   geom_point(aes(x = total_earnings_female, y = occupation),
