--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -71,11 +71,13 @@ I'll be using both of these (really wonderful and easy-to-use) tools during lect
 
 ### A. (OPTIONAL) Bring a cool data viz!
 
-This week's discussion section will be a time to explore, share, and discuss "non-standard" chart types, or those that present data using the fundamental chart types we've already discussed in different and exciting ways. You'll have time to browse some data viz during section, but it would be great to bring any inspiring examples you might have come across already.
+This week's discussion section will be a time to explore, share, and discuss "non-standard" chart types, as well as those that present data using the fundamental chart types we've already discussed in different and exciting ways. You'll have time to browse some data viz during section, but it would be great to bring any inspiring examples you might have come across already.
+
+### B. (OPTIONAL) Get yourself a Bluesky account
+
+[Bluesky](https://bsky.app/){target="_blank"} is quickly becoming the Twitter replacement for data science community members to connect, share, and learn together. You can stay up to date on [#TidyTuesday](https://bsky.app/hashtag/TidyTuesday){target="_blank"} submissions and follow many of the great data viz folks in the field. Check out the [resources page](../resources.qmd#online-communities) for more information on how to get started.
 
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
-
-*Coming soon!*
 
 <!-- This week, you'll move beyond the fundamental graphic forms that we covered in lecture and discuss some advanced chart types. These are great options to keep in mind as you continue working on your final project ([HW #4](https://samanthacsik.github.io/EDS-240-data-viz/assignments/HW4.html))! -->
 
@@ -85,7 +87,7 @@ This week's discussion section will be a time to explore, share, and discuss "no
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [D5 slides: "non-standard" chart types](discussion/week5/week5-slides.qmd) | *NA* | *NA* |
+| [D5 slides: "non-standard" chart types](discussion/week5/week5-slides.qmd){target="_blank"} | *NA* | *NA* |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 <!-- This week, you'll be prepping a data visualization using the data you found / wrangled as part of your final project (HW #4). This does not need to be a polished viz, but should focus on clarity of message. You'll be discussing each others' visualizations and commenting on what the main takeaways are (ideally, you'll walk away with the same message as intended by the plot-creator!). Please complete the following ahead of section: -->
