--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -77,7 +77,7 @@ We'll learn how to use [Font Awesome](https://fontawesome.com/) icons in our ggp
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [D6 slides: saving plots](discussion/week6/week6-slides.qmd){target="_blank"} | *see pre-discussion prep* | [D6 solution](discussion/week6/week6-solution.qmd) |
+| [D6 slides: saving plots](discussion/week6/week6-slides.qmd){target="_blank"} | *see pre-discussion prep* | *see D6 slides* |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
