finished week 5 slides

--- a/resources.qmd
+++ b/resources.qmd
@@ -8,6 +8,7 @@ toc: true
 ## Books {#books}
 
 - **[Fundamentals of Data Visualization](https://clauswilke.com/dataviz/), by Claus O. Wilke** -- a primer on making informative and compelling figures
+- **[Better Data Visualizations: A Guide for Scholars, Researchers, and Wonks](https://www.jstor.org/stable/10.7312/schw19310), by [Jonathan Schwabish](https://www.linkedin.com/in/jonathanschwabish/)** -- discusses strategies for creating more effective data visualizations
 - **[R for Data Science (2e)](https://r4ds.hadley.nz/), by Hadley Wickham, Mine Çetinkaya-Rundel, and Garrett Grolemund** -- an excellent primer on all things R for data wrangling, exploration, visualizing, and communicating, largely focused on using the `{tidyverse}`
 - **[ggplot2: Elegant Graphics for Data Analysis (3e)](https://ggplot2-book.org/), by Hadley Wickham, Danielle Navarro, and Thomas Lin Pedersen** -- helpful for understanding the underlying theory of ggplot2 graphics (NOTE: this is currently (as of November 2023) a work-in-progress, and as the authors put it, "a dumping ground for ideas...we don't recommend reading it" -- it's still worth noting its existence so that you can return to it in the future!)
 - **[Data Visualization: A practical introduction](https://socviz.co/), by Kieran Healy** -- a hands-on intro to the principles and practice of looking at and presenting data using R and ggplot.
@@ -84,7 +85,9 @@ toc: true
 ### news / reporting outlets {#news-reporting}
 
 - **[The Upshot](https://www.nytimes.com/section/upshot), by The New York Times** -- analysis that explains politics, policy and everyday life, with an emphasis on data and charts
+  - UCSB provides complimentary access to The New York Times -- [sign up online](https://www.nytimes.com/activate-access/ippass)!
 - **[Graphic Detail](https://www.economist.com/graphic-detail?page=1), by The Economist** -- a collection of graphics published by The Economist
+- **[Reuters Graphics](https://www.reuters.com/graphics/)** -- lots of scrollytelling data stories!
 
 ### videos {#videos}
 - **[The Data Digest](https://www.youtube.com/@TheDataDigest)** -- a YouTube channel with *super* helpful, short videos on stats / data viz in R
@@ -173,6 +176,8 @@ Data are *everywhere*, but that doesn't mean they're necessarily easy to track d
       - [Data People Starter Pack](https://bsky.app/starter-pack-short/8TdEfdK)
       - [Earth Observation & remote sensing](https://bsky.app/starter-pack-short/4PMRhNL)
       - [Climate Science & Research Orgs](https://bsky.app/starter-pack-short/5kuYAhM)
+      - [Women in Data](https://bsky.app/starter-pack/merrykerry.bsky.social/3lazz4yxtox27)
+      - [Data journos starter pack](https://bsky.app/starter-pack/matildakdavies.bsky.social/3lb2wnwmbhl2k)
   3. Filter content using popular hashtags, like 
       - [#TidyTuesday](https://bsky.app/hashtag/TidyTuesday)
       - [#rstats](https://bsky.app/hashtag/RStats)
