--- a/course-materials/week4.qmd
+++ b/course-materials/week4.qmd
@@ -53,7 +53,7 @@ Add a new blank file to your class repo at the following location: `EDS-240-clas
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [D4 slides: ggplot themes](discussion/week4/week4-slides.qmd) | [D4 exercise: USDM plot theme](discussion/week4/week4-exercise.qmd) | [D4 solution](discussion/week4/week4-solution.qmd) |
+| [D4 slides: ggplot themes](discussion/week4/week4-slides.qmd){target="_blank"} | [D4 exercise: USDM plot theme](discussion/week4/week4-exercise.qmd) | [D4 solution](discussion/week4/week4-solution.qmd) |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
