started drafting week 7 discussion materials

--- a/course-materials/discussion/week4/week4-exercise.qmd
+++ b/course-materials/discussion/week4/week4-exercise.qmd
@@ -68,7 +68,7 @@ drought_clean |>
   geom_area(position = position_stack(reverse = TRUE)) +
   
   # update colors to match US Drought Monitor ----
- # (colors identified using ColorPick Eyedropper extension on the original USDM data viz) 
+  # (colors identified using ColorPick Eyedropper extension on the original USDM data viz) 
   scale_fill_manual(values = c("#853904", "#FF0000", "#FFC100", "#FFD965", "#FFFF00")) +
   
   # set x-axis breaks & remove padding between data and x-axis ----
@@ -89,7 +89,7 @@ drought_clean |>
 ::: {.callout-important}
 ## Use the Zoom button to check out your plot as you iterate
 
-Your plot will appear slightly different in the RStudio plot window vs. a zoom window vs. rendered in a Quarto doc -- I recommend checking it out in the zoom window while you iterate. 
+Your plot will appear slightly different in the RStudio plot window vs. a zoom window vs. rendered in a Quarto doc -- I recommend checking it out in the zoom window while you iterate.
 
-**Importantly, how you theme a data visualization depends on how you plan to package / present it.** For example, your plot margin sizes may differ when you prepare a standalone plot vs. one that you plan to embed in a rendered Quarto doc.
+**Importantly, how you theme a data visualization depends on how you plan to package / present it.** For example, your plot margin sizes may differ when you prepare a standalone plot vs. one that you plan to embed in a rendered Quarto doc. We'll explore this idea more during week 6 discussion!
 :::
