--- a/course-materials/discussion/week5/week5-slides.qmd
+++ b/course-materials/discussion/week5/week5-slides.qmd
@@ -510,6 +510,24 @@ Source: [Global demographics: life expectency and population](https://github.com
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
+knitr::include_graphics("images/petal-plot-dogs.png")
+```
+
+<br>
+
+::: {.footer}
+**Petal Plot**
+
+Source: [Dog Breeds](https://github.com/BlakeRMills/TidyTuesday/tree/main/2022/Dog%20Breeds%20(1%20Feb%202022)){target="_blank"}, by [Blake Robert Mills](https://www.blakerobertmills.com/){target="_blank"}
+:::
+
+---
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
 knitr::include_graphics("images/circular-bar-bees.png")
 ```
 
@@ -519,6 +537,24 @@ knitr::include_graphics("images/circular-bar-bees.png")
 **Circular Bar Chart**
 
 Source: [Top 10 species present at vertically-oriented vinyard types](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/#what-are-the-top-10-species-present-at-a-vertically-oriented-vineyard-type){target="_blank"} (part of a larger [infographic](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/#the-product){target="_blank"}), by [Melissa Widas](https://mwidas.github.io/){target="_blank"}
+:::
+
+---
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/icon-array-plastic.png")
+```
+
+<br>
+
+::: {.footer}
+**Pictogram**
+
+Source: [Global Plastic Pollution](https://github.com/Ijeamakaanyene/tidytuesday/blob/master/scripts/2021_03_plastic_pollution.Rmd){target="_blank"}, by [Ijeamaka Anyene](https://ijeamaka-anyene.netlify.app/){target="_blank"}
 :::
 
 ---
