--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -43,7 +43,7 @@ For example, let's say I'm interested in how Lyme disease incidence is changing 
 - [ ] **4.** In [HW #2](HW2.qmd){target="_blank"}, you created some exploratory data viz to better understand your data. You may already have some ideas of how you plan to formally visualize your data, but it's *incredibly* helpful to look at visualizations by other creators for inspiration. Find *at least two* data visualizations that you could (potentially) borrow / adapt pieces from. Link to them or download and embed them into your `.qmd` file, and explain which elements you might borrow (e.g. the graphic form, legend design, layout, etc.). 
 
 ::: {.callout-tip}
-## Tip: Remember to check out the [Resources page](../resources.qmd){target="_blank"}!!
+## Tip: Remember to check out the Resources page!!
 It lists tons of really wonderful websites, tutorials, and links to the repos / websites of some seriously incredible [data viz creators](../resources.qmd#inspirational-data-visualization-creators){target="_blank"}. This is an excellent place to start when looking for inspiration.
 :::
 
@@ -85,11 +85,11 @@ knitr::include_graphics("images/hand-drawn-plot.png")
 
 - [ ] **6.** Mock up **all** of your hand drawn visualizations using code. We understand that you will continue to iterate on these into HW #4 (particularly after receiving feedback), but by the end of HW #3, you should:
 
-  - have your data plotted (if you're experimenting with a graphic form(s) that was not explicitly covered in class, we understand that this may take some more time to build; you should have as much put together as possible)
-  - use appropriate strategies to highlight / focus attention on a clear message
-  - include appropriate text such as titles, captions, axis labels 
-  - experiment with colors and typefaces / fonts
-  - create a presentable / aesthetically-pleasing theme (e.g. (re)move gridlines / legends as appropriate, adjust font sizes, etc.)
+  - [ ] have your data plotted (if you're experimenting with a graphic form(s) that was not explicitly covered in class, we understand that this may take some more time to build; you should have as much put together as possible)
+  - [ ] use appropriate strategies to highlight / focus attention on a clear message
+  - [ ] include appropriate text such as titles, captions, axis labels 
+  - [ ] experiment with colors and typefaces / fonts
+  - [ ] create a presentable / aesthetically-pleasing theme (e.g. (re)move gridlines / legends as appropriate, adjust font sizes, etc.)
 
 - [ ] **7.** Answer the following questions:
     - [ ] **a.** What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R?
