--- a/course-materials/week7.qmd
+++ b/course-materials/week7.qmd
@@ -25,62 +25,78 @@ knitr::include_graphics(here::here("images", "horst-happy-castle.png"))
 
 *There is no lecture this week!*
 
-## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
 
-*Coming soon!*
+From here on out, we'll be using discussion sections to share drafts of final project data visualizations and receive feedback from peers. Please complete the following before coming to section:
 
-<!-- ### Pre-discussion Prep -->
+### A. Prepare your data viz slide 
 
-<!-- [HW #3](../assignments/HW3.qmd) has you working on your visualizations for your [final project (HW #4)](../assignments/HW4.qmd). Please plan to bring the following to discussion: -->
+<!-- Add *one* of your draft data vizualizations to your slide -->
 
-<!-- - **one** of your three visualizations (i.e. one of the three required viz for [option 1](../assignments/HW4.qmd#option-1), *or* one of the three viz that will make up your infographic for [option 2](../assignments/HW4.qmd#option-1#option-2))   -->
-<!-- - the question that you’re trying to answer with your visualization -->
+[HW #3](assignments/HW3.qmd){target="_blank"}, asks you to draft all three required visualizations for your chosen [final project (HW #4)](assignments/HW4.qmd){target="_blank"} option. Find your assigned slide from the correct Google Slide deck (see table, below) and add the following:
+
+<!-- plan to bring the following to discussion: -->
+<!-- (i.e. one of the three viz that will make up your infographic for [option 1](../assignments/HW4.qmd#option-1), *or* one of the three required viz for for [option 2](../assignments/HW4.qmd#option-1#option-2), *or*) -->
+
+1. ***one*** of your three visualizations
+2. the question that you're trying to answer with your visualization
 
 <!-- Add your visualization and your question to the appropriate Google slide deck (each slide is labeled with a name) before section begins: -->
 
 <!-- - [10am section slides](https://docs.google.com/presentation/d/1sDdgujrlVPwy44YIlbhKj-tdENu1nzI_d9jOLM05Ptg/edit#slide=id.p) -->
 <!-- - [11am section slides](https://docs.google.com/presentation/d/15B3Yn0QLdNlLdLSNwzmuqDkXACeBQKkZq_uWk2l7WHI/edit#slide=id.p) -->
 
-<!-- The viz you bring should meet the [HW #3](https://samanthacsik.github.io/EDS-240-data-viz/assignments/HW3.html) requirements (see the section that begins with *"Mock up your visualizations using code..."*) -- this should be a well-constructed, carefully thought-through and polished plot (any one of the panels in the [Hollywood Age Gaps](https://docs.google.com/presentation/d/10tk6XawtK0GD-XU4VCkupTOBK4tFW0JamKUeufiqlL0/edit#slide=id.g2b861b4d8eb_0_63) visualization that you saw in discussion last week is a great example of the level of “polish” we’d expect to see). You should be prepared to discuss your design choices and receive constructive feedback from your peers. -->
+The visualization you bring should meet the [HW #3](assignments/HW3.qmd){target="_blank"} requirements (see #6 under the [Description](assignments/HW3.qmd#description){target="_blank"} section) -- this should be a well-constructed, carefully thought-through and polished plot. You should be prepared to discuss your design choices and receive constructive feedback from your peers.
 
-<!-- ### How to give / receive feedback -->
+### B. Read up on how to give / receive feedback
 
-<!-- Giving, receiving *and* implementing feedback is an important part of any creative process (including building data visualizations!). **There are two "levels" of feedback:** -->
+Giving, receiving *and* implementing feedback is an important part of any creative process (including building data visualizations!). **There are two "levels" of feedback:**
 
-<!-- - **high-level:** where the focus is on whether a data visualization is accurate, relevant and understandable for the intended audience -->
-<!-- - **detail-oriented:** where the focus is on aesthetics choices (e.g. colors, typefaces, layout, themes, white space, etc.) and how those choices help to enhance / tell the story  -->
-<!-- [**This week, you should focus largely on providing *high-level* feedback (though suggestions on how to tweak the details of a visualization are welcome).**]{.teal-text} -->
+- **high-level:** where the focus is on whether a data visualization is accurate, relevant and understandable for the intended audience
+- **detail-oriented:** where the focus is on aesthetics choices (e.g. colors, typefaces, layout, themes, white space, etc.) and how those choices help to enhance / tell the story
 
-<!-- ::: {.callout-tip collapse=true} -->
-<!-- ## Important tips for giving / receiving / implementing feedback (adapted from this [LinkedIn article](https://www.linkedin.com/advice/0/how-do-you-improve-your-data-visualizations-feedback)): -->
+[**This week, you should focus largely on providing *high-level* feedback (though suggestions on how to tweak the details of a visualization are welcome).**]{.teal-text}
 
-<!-- **For giving feedback**: -->
+::: {.callout-tip collapse=true}
+## Important tips for giving / receiving / implementing feedback:
 
-<!-- - focus on the strengths / weakness of the visualization itself, not the person who created it -->
-<!-- - balance positive and negative feedback, and start with the positives!  -->
-<!-- - stay objective when suggesting improvements (e.g. "This part might benefit from some clarity...")  -->
-<!-- - suggest actionable solutions and / or alternatives, rather than only problems or criticisms  -->
+The following tips were adapted from this [LinkedIn article](https://www.linkedin.com/advice/0/how-do-you-improve-your-data-visualizations-feedback){target="_blank"}.
 
-<!-- **For receiving feedback**: -->
+**For giving feedback**:
 
-<!-- - receiving feedback can be stressful -- this is a very normal feeling! -->
-<!-- - listen carefully without disrupting / defending yourself -->
-<!-- - take notes, ask questions, and thank your feedback giver(s) -->
-<!-- - evaluate your feedback objectively to decide what to keep / reject / modify -->
+- focus on the strengths / weakness of the visualization itself, not the person who created it
+- balance positive and negative feedback, and start with the positives!
+- stay objective when suggesting improvements (e.g. "This part might benefit from some clarity...")
+- suggest actionable solutions and / or alternatives, rather than only problems or criticisms
 
-<!-- **For applying feedback:** -->
+**For receiving feedback**:
 
-<!-- - prioritize feedback based on relevance, importance, and feasibility -->
-<!-- - create a plan and a timeline to implement  -->
-<!-- - critically evaluate / compare your before and after versions -->
-<!-- - seek new feedback! -->
-<!-- ::: -->
+- receiving feedback can be stressful -- this is a very normal feeling!
+- listen carefully without disrupting / defending yourself
+- take notes, ask questions, and thank your feedback giver(s)
+- evaluate your feedback objectively to decide what to keep / reject / modify
 
-<!-- ### Supplementary resources -->
+**For applying feedback:**
 
-<!-- - [Design and Redesign](https://medium.com/@hint_fm/design-and-redesign-4ab77206cf9), by Fernanda Viégas & Martin Wattenberg -->
-<!-- - [A Better Path Toward Criticizing Data Visualizations](https://policyviz.com/2023/02/01/a-better-path-toward-criticizing-data-visualization/), by Colin Mcnamara -->
-<!-- - [The beauty of data visualization](https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization?referrer=playlist-making_sense_of_too_much_data), a TED Talk by [David McCandless](https://davidmccandless.com/) (founder of [information is beautiful](https://informationisbeautiful.net/)) -- this is a fun watch! -->
+- prioritize feedback based on relevance, importance, and feasibility
+- create a plan and a timeline to implement
+- critically evaluate / compare your before and after versions
+- seek new feedback!
+:::
+
+Here are some great supplementary resources:
+
+- [Design and Redesign](https://medium.com/@hint_fm/design-and-redesign-4ab77206cf9){target="_blank"}, by Fernanda Viégas & Martin Wattenberg
+- [A Better Path Toward Criticizing Data Visualizations](https://policyviz.com/2023/02/01/a-better-path-toward-criticizing-data-visualization/){target="_blank"}, by Colin Mcnamara
+- [The beauty of data visualization](https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization?referrer=playlist-making_sense_of_too_much_data){target="_blank"}, a TED Talk by [David McCandless](https://davidmccandless.com/){target="_blank"} (founder of [information is beautiful](https://informationisbeautiful.net/){target="_blank"}) -- this is a fun watch!
+
+## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
+
+*Coming soon!*
+
+In pairs, spend 5 minutes reviewing a partner's viz and jot down some feedback.
+Spend 5 minutes discussing your feedback with your partner. Do the reverse (another 5 minutes)
+last ? min of class, rapid fire 1 thing we love 1 thing to improve
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
